@@ -1,6 +1,5 @@
 package no.nav.testnav.identpool.util;
 
-import com.google.common.collect.ImmutableMap;
 import no.nav.testnav.identpool.domain.Ident;
 import no.nav.testnav.identpool.domain.Identtype;
 import no.nav.testnav.identpool.domain.Kjoenn;
@@ -15,7 +14,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.lang.Character.getNumericValue;
@@ -28,17 +26,15 @@ import static org.apache.commons.lang3.BooleanUtils.isTrue;
 public final class IdentGeneratorUtil {
     private static final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("ddMMyy");
     public static final Map<Identtype, BiFunction<LocalDate, Boolean, List<String>>> generatorMap =
-            ImmutableMap.of(
+            Map.of(
                     Identtype.FNR, IdentGeneratorUtil::generateFNumbers,
                     Identtype.DNR, IdentGeneratorUtil::generateDNumbers,
-                    Identtype.BOST, IdentGeneratorUtil::generateBNumbers,
-                    Identtype.FDAT, IdentGeneratorUtil::generateFdatNumbers);
+                    Identtype.BOST, IdentGeneratorUtil::generateBNumbers);
     public static final Map<Identtype, Function<LocalDate, String>> numberFormatter =
-            ImmutableMap.of(
+            Map.of(
                     Identtype.FNR, IdentGeneratorUtil::getFnrFormat,
                     Identtype.DNR, IdentGeneratorUtil::getDnrFormat,
-                    Identtype.BOST, IdentGeneratorUtil::getBnrFormat,
-                    Identtype.FDAT, IdentGeneratorUtil::getFdatFormat);
+                    Identtype.BOST, IdentGeneratorUtil::getBnrFormat);
     private static final SecureRandom random = new SecureRandom();
 
     private IdentGeneratorUtil() {
@@ -101,15 +97,11 @@ public final class IdentGeneratorUtil {
         return generateNumbers(birthdate, amendSyntetisk(getBnrFormat(birthdate), syntetisk));
     }
 
-    private static List<String> generateFdatNumbers(LocalDate birthdate, boolean syntetisk) {
-        return generateNumbers(birthdate, amendSyntetisk(getFdatFormat(birthdate), syntetisk));
-    }
-
     private static List<String> generateNumbers(LocalDate date, String numberFormat) {
         return getCategoryNumberStreamReverse(date)
                 .mapToObj(number -> generateFnr(String.format(numberFormat, number)))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static String amendSyntetisk(String format, Boolean syntetiskIdent) {
@@ -130,10 +122,6 @@ public final class IdentGeneratorUtil {
     private static String getBnrFormat(LocalDate birthdate) {
         String format = getFnrFormat(birthdate);
         return format.substring(0, 2) + (getNumericValue(format.charAt(2)) + 2) + format.substring(3);
-    }
-
-    private static String getFdatFormat(LocalDate birthdate) {
-        return formatter.format(birthdate) + "0000%01d";
     }
 
     private static IntStream getCategoryNumberStreamReverse(LocalDate birthDate) {
